--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</head>
 
 	<body>
+		<embed src="img/space.svg" width="100%" height="100%"></embed>
 	</body>
 	<script src="lib/require.js" data-main ="js/main.js" type="text/javascript" charset="utf-8"></script>
 </html>
