--- a/index.html
+++ b/index.html
@@ -12,10 +12,34 @@
 				overflow-x: hidden;
 				overflow-y: hidden;
 			}
+			#canvas{
+				position: relative;
+				left: 0px;
+				top: 0px;
+			}
+			#canvas>.bg{
+				position: absolute;
+				z-index: 999;
+				width: 100%;
+				height: 100%;
+				background-image: url(img/space-logo.png);	
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: 40% 40%;
+			}
+			/*#canvas>canvas{
+				position: absolute;
+				left: 0px;
+				top: 0px;
+			}*/
 		</style>
 	</head>
 
 	<body>
+		<div id="canvas">
+			<div class="bg"></div>
+			<!--<img src="img/space-logo.png"/>-->
+		</div>
 	</body>
 	<script src="lib/require.js" data-main ="js/main.js" type="text/javascript" charset="utf-8"></script>
 </html>
